--- a/sections/main-password-header.liquid
+++ b/sections/main-password-header.liquid
@@ -49,6 +49,7 @@
             </button>
             <h2 class="password-modal__content-heading" id="DialogHeading">
               {{ 'general.password_page.login_form_heading' | t }}
+              <h1>password: 1</h1>
             </h2>
             {%- form 'storefront_password', class: 'password-form' -%}
               <div class="password-field field{% if form.errors %} password-field--error{% endif %}">
